--- a/test.ipynb
+++ b/test.ipynb
@@ -111,7 +111,11 @@
    "id": "08a50aed-b130-4fba-9670-6683c03d9818",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "FRAME_SIZE= 1024\n",
+    "HOP_LENGTH= 512\n",
+    "ZCR_music = librosa.feature.zero_crossing_rate(audio, frame_length=FRAME_SIZE, hop_length=HOP_LENGTH)[0]"
+   ]
   },
   {
    "cell_type": "code",
@@ -119,7 +123,9 @@
    "id": "2fd83e3d-a3cc-4b42-a77f-52df761477ac",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.plot(ZCR_music)"
+   ]
   },
   {
    "cell_type": "code",
@@ -127,7 +133,10 @@
    "id": "fb1b8189-c947-476e-9485-8bac7f40faa8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mfccs_music = librosa.feature.mfcc(y=audio, sr=sr, n_mfcc=10)\n",
+    "mfccs_music.shape"
+   ]
   },
   {
    "cell_type": "code",
@@ -135,7 +144,12 @@
    "id": "81b71e0a-c689-4fa8-9266-4f0853705df3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lt.figure(figsize=(25, 10))\n",
+    "librosa.display.specshow(mfccs_music, \n",
+    "                         x_axis=\"time\", \n",
+    "                         sr=sr)"
+   ]
   },
   {
    "cell_type": "code",
@@ -229,25 +243,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 69,
    "id": "ad1aa3ae-1fc0-4257-84b1-51a973ed8052",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "warning: in the working copy of 'test.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!git add .\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 71,
    "id": "11ceacc6-ad0b-410d-9f43-fcc0fa608951",
    "metadata": {},
    "outputs": [
@@ -255,8 +261,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 7e61264] test.ipynb\n",
-      " 1 file changed, 14 insertions(+), 179 deletions(-)\n"
+      "On branch main\n",
+      "Your branch is up to date with 'origin/main'.\n",
+      "\n",
+      "nothing to commit, working tree clean\n"
      ]
     }
    ],
@@ -266,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 73,
    "id": "8f92f97b-eb5a-4fea-a171-b9a68d5ddc53",
    "metadata": {},
    "outputs": [
@@ -274,8 +282,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "To https://github.com/ranjith-005/audio-classifier-ai\n",
-      "   37d2054..7e61264  main -> main\n"
+      "Everything up-to-date\n"
      ]
     }
    ],
@@ -302,55 +309,6 @@
    ],
    "source": [
     "pip install gitpython\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "id": "dbf553e2-2f97-4f27-9c5b-d265e49a8d11",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import git"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "id": "677b02f8-f9c4-416e-a4b0-b46041a292ef",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NoSuchPathError",
-     "evalue": "C:\\Users\\91935\\audio-classifier-ai\\audio-classifier-ai",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNoSuchPathError\u001b[0m                           Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[61], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mgit\u001b[39;00m\n\u001b[0;32m      3\u001b[0m repo_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124maudio-classifier-ai\u001b[39m\u001b[38;5;124m\"\u001b[39m  \u001b[38;5;66;03m# Local repository path\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m repo \u001b[38;5;241m=\u001b[39m git\u001b[38;5;241m.\u001b[39mRepo(repo_path)\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m# Pull latest changes\u001b[39;00m\n\u001b[0;32m      7\u001b[0m repo\u001b[38;5;241m.\u001b[39mremotes\u001b[38;5;241m.\u001b[39morigin\u001b[38;5;241m.\u001b[39mpull()\n",
-      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\git\\repo\\base.py:215\u001b[0m, in \u001b[0;36mRepo.__init__\u001b[1;34m(self, path, odbt, search_parent_directories, expand_vars)\u001b[0m\n\u001b[0;32m    213\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m epath \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    214\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mexists(epath):\n\u001b[1;32m--> 215\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m NoSuchPathError(epath)\n\u001b[0;32m    217\u001b[0m \u001b[38;5;66;03m## Walk up the path to find the `.git` dir.\u001b[39;00m\n\u001b[0;32m    218\u001b[0m \u001b[38;5;66;03m#\u001b[39;00m\n\u001b[0;32m    219\u001b[0m curpath \u001b[38;5;241m=\u001b[39m epath\n",
-      "\u001b[1;31mNoSuchPathError\u001b[0m: C:\\Users\\91935\\audio-classifier-ai\\audio-classifier-ai"
-     ]
-    }
-   ],
-   "source": [
-    "import git\n",
-    "\n",
-    "repo_path = \"audio-classifier-ai\"  # Local repository path\n",
-    "repo = git.Repo(repo_path)\n",
-    "\n",
-    "# Pull latest changes\n",
-    "repo.remotes.origin.pull()\n",
-    "\n",
-    "# Stage all changes\n",
-    "repo.git.add(\".\")\n",
-    "\n",
-    "# Commit changes\n",
-    "repo.index.commit(\"Auto-update Jupyter Notebook\")\n",
-    "\n",
-    "# Push changes\n",
-    "repo.remotes.origin.push()\n",
-    "print(\"Jupyter Notebook updated on GitHub!\")\n"
    ]
   },
   {
